--- a/lib/Chess/Position/Tutorial.pod
+++ b/lib/Chess/Position/Tutorial.pod
@@ -160,32 +160,40 @@ A bitboard has 64 bits, and each bit stands for a particular square of
 the chess board:
 
        a  b  c  d  e  f  g  h
-    8 63 62 61 60 59 58 57 56 8
-    7 55 54 53 52 51 50 49 48 7
-    6 47 46 45 44 43 42 41 40 6
-    5 39 38 37 36 35 34 33 32 5
-    4 31 30 29 28 27 26 25 24 4
-    3 23 22 21 20 19 18 17 16 3
-    2 15 14 13 12 11 10  9  8 2
-    1  7  6  5  4  3  2  1  0 1
+    8 56 57 58 59 60 61 62 63 8
+    7 48 49 50 51 52 53 54 55 7
+    6 40 41 42 43 44 45 46 47 6
+    5 32 33 34 35 36 37 38 39 5
+    4 24 25 26 27 28 29 30 31 4
+    3 16 17 18 19 20 21 22 23 3
+    2  8  9 10 11 12 13 14 15 2
+    1  0  1  2  3  4  5  6  7 1
        a  b  c  d  e  f  g  h
 
-So the square "e4" is represented by the bit with the index 27 of a
-bitboard (actually the 28th bit if you count from 1). So, a better term
+So the square "e4" is represented by the bit with the index 28 of a
+bitboard (actually the 29th bit if you count from 1). So, a better term
 may actually be "index" or "bit number".
+
+But you do not have to remember the mapping. Instead just use the constants
+C<CP_A1> for "a1", C<CP_A2> for "a2" and so on.
 
 =head4 Shift Masks
 
 How would you find out whether the square "e4" is occupied by a white
-piece? You create a bitboard (64-bit integer) where only the 27th bit is
+piece? You create a bitboard (64-bit integer) where only the 28th bit is
 set and AND that with the bitboard of the white pieces. And you create a
-bitboard where only the 27th bit is set with a shift operation:
+bitboard where only the 28th bit is set with a shift operation:
 
-    $e4_square = (1 << 27) | $w_pieces
+    $e4_square = (1 << 28) | $w_pieces
 
-You "shift" the one 27 places to the left. And this is why the indexes
+You "shift" the one 28 places to the left. And this is why the indexes
 or bit numbers are called "shifts" here. And a shift mask is a bitboard
 with exactly one bit set.
+
+The code will be better understandable if you replace the literal 28 with a
+constant:
+
+    $e4_square = (1 << CP_E4) | $w_pieces
 
 =head3 C<Chess::Position> Instances
 
@@ -473,8 +481,7 @@ faster:
     my $white_pawn_mask = cp_pos_w_pieces($pos) & cp_pos_pawns($pos);
 
     while ($white_pawn_mask) {
-        my $shift_mask = cp_bb_clear_but_least_set $white_pawn_mask;
-        my $shift = cp_bb_count_isolated_trailing_zbits $shift_mask;
+        my $shift = cp_bb_count_trailing_zbits $shift_mask;
 
         my $square = cp_shift_to_square $shift;
         print "There is a white pawn on $square.\n";
@@ -482,9 +489,8 @@ faster:
         $white_pawn_mask = cp_bb_clear_least_set $white_pawn_mask;
     }
 
-The macro `cp_bb_clear_but_least_set()` clears all bits in a bitboard except
-for the last significant one.  If you count the trailing zero bits with the
-macro `cp_bb_count_isolated_trailing_zbits()` you get the position of that bit in the
+If you count the trailing zero bits with the macro
+C<cp_bb_count_trailing_zbits()> you get the position of that bit in the
 bitboard and you can now use that information for whatever you want to do.
 
 At the end of the loop body, you clear the least significant bit of the
