--- a/lib/Chess/Position/Macro.pod
+++ b/lib/Chess/Position/Macro.pod
@@ -287,6 +287,8 @@ promoted to a queen.
 
 =head2 Macros for Magic Moves Resp. Magic Bitboards
 
+=over 4
+
 =item B<cp_mm_bmagic(SHIFT, OCCUPANCY)>
 
 Returns a bitboard of all squares that a bishop attacks from the square denoted
@@ -298,6 +300,8 @@ own pieces.
 Returns a bitboard of all squares that a rook attacks from the square denoted
 by B<SHIFT> if B<OCCUPANCY> is a bitboard of all squares that are occupied by
 own pieces.
+
+=back
 
 =head2 Bit-fiddling Macros
 
